<?xml version="1.0"?>
<package>
  <name>scara_v2_moveit_api</name>
  <version>0.3.0</version>
  <description>The scara_v2_moveit_api package</description>
  <maintainer email="viktor@todo.todo">viktor</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>


  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
