<?xml version="1.0"?>
<package>
  <name>training</name>
  <version>0.0.0</version>
  <description>The training package</description>

  <maintainer email="viktor@todo.todo">viktor</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
